app/webroot/css/global.css
/* Grid */

.grid_1 {width: 2.91667%;} /* 28px / 960px */ 
.grid_2 {width: 11.25%;} /* 108px / 960px */ 
.grid_3 {width: 19.5833%;} /* 188px / 960px */ 
.grid_4 {width: 27.9167%;} /* 268px / 960px */ 
.grid_5 {width: 36.25%;} /* 348px / 960px */ 
.grid_6 {width: 44.5833%;} /* 428px / 960px */ 
.grid_7 {width: 52.9167%;} /* 508px / 960px */ 
.grid_8 {width: 61.25%;} /* 588px / 960px */ 
.grid_9 {width: 69.5833%;} /* 668px / 960px */ 
.grid_10 {width: 77.9167%;} /* 748px / 960px */ 
.grid_11 {width: 86.25%;} /* 828px / 960px */ 
.grid_12 {width: 94.5833%;} /* 908px / 960px */ 
.column {margin: 0 1.04167% 0 1.04167%; /* 10px / 960px */
         overflow: hidden;
         float: left;
         padding: 0.9375em;
         border: 1px;
         display: inline;}
.row {width: 60em; /* 960px / 16px  */
      margin: 0 auto;
      overflow: hidden;}
.row .row {margin: 0 -1.04167% 0 -1.04167%; /* 10px / 960px */
           width: auto;
           display: inline-block;}

/* Global */
body, html {
	padding: 0;
	margin: 0;

	background: white;
	font-size:16px;

	font-family: 'Roboto', Helvetica, Arial, sans-serif;
	width: 100%;
}

.column {
     border: 1px solid #cacaca;
     margin-bottom: 0.9375em;
}

#main-header { background: url("../img/header-bg.png") no-repeat scroll center top #025;
    position:relative;
    z-index: 500;
    min-width: 1004px;
}
#header-top{
    height: 38px;
}

#button-container {
    position: absolute;
    top: 6px;
    padding-left: 835px;
}

.wrapper{
    width: 940px;
    margin: 0 auto;
    padding: 0 32px;
}

a.button {
    color: #fff;
    display: block;
    background: #628cb6;
    background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #628cb6), color-stop(100%, #336699));
    background-image: -webkit-linear-gradient(top, #628cb6 0%, #336699 100%);
    background-image: -moz-linear-gradient(top, #628cb6 0%, #336699 100%);
    background-image: -o-linear-gradient(top, #628cb6 0%, #336699 100%);
    background-image: -ms-linear-gradient(top, #628cb6 0%, #336699 100%);
    background-image: linear-gradient(top, #628cb6 0%, #336699 100%);
    border-radius:14px;
    box-shadow:
        0 1px 0 rgba(255, 255, 255, 0.25) inset,
        0 1px 8px rgba(0, 0, 0, 0.2);
    padding: 4px 28px;
    float: left;
    margin-right: 12px;
    text-decoration: none;
    font-weight: bold;
}
a.button:hover {
    background: #369;
    background-image: -webkit-gradient(linear,50% 0,50% 100%,color-stop(0%,#369),color-stop(100%,#147));
    background-image: -webkit-linear-gradient(top,#369 0,#147 100%);
    background-image: -moz-linear-gradient(top,#369 0,#147 100%);
    background-image: -o-linear-gradient(top,#369 0,#147 100%);
    background-image: -ms-linear-gradient(top,#369 0,#147 100%);
    background-image: linear-gradient(top,#369 0,#147 100%);
}

div#banner {
	background: #003b65;
	height: 40px;
}

div#banner img {
	margin-top:12px;
}

div.container {
	width:62em;
	margin:0 auto;
}

form.search {
	border: 1px solid #ccc;
	border-top-width: 0;
}

form.search h1 {
	margin: 1em 0 .5em .625em;
	font-family: 'PT Serif', Georgia, Palatino, Serif;
	color: #003b65;
}

div.container-error {
    width:62em;
    margin:0 auto;
    text-align: center;
}

form.error {
    border: 1px solid #ccc;
    border-top-width: 0;
}

form.error h1 {
    margin: 1em 0 .5em .625em;
    font-family: 'PT Serif', Georgia, Palatino, Serif;
    color: #003b65;
}

form.error h2 {
    margin: 1em 0 .5em .625em;
    font-family: 'PT Serif', Georgia, Palatino, Serif;
    color: #003b65;
}

.rowError {width: 60em; /* 960px / 16px  */
    margin: 0 auto;
    overflow: hidden;}
.rowError .rowError {margin: 0 -1.04167% 0 -1.04167%; /* 10px / 960px */
    width: auto;
    display: inline-block;}

span.recipient {
    float: left;
    width: 49%;
}

span.sender {
	float: right;
	width: 49%;
}

form.search label {
	display: inline-block;
}

form.search input, form.search input:active {
	padding: 5px;
	font-family: inherit;
	font-size: inherit;

	outline: none;
	border: 1px solid #c9c9c9;
	border-left-width: 0;
	background: #fafafa;

	margin: 0;

	display: inline;
	width: 52%;
	border-radius: 0 3px 3px 0;
}


span.sender input, span.sender input:active {
	width:58%;
}

div.subject input, div.subject input:active {
/*	width: 60%;*/
}

div.subject {
	float: left;
}


form.search input:active, form.search input:focus {
	background: white;
	border-color: #aaa;
	font-style: normal;
	color: #000;
}

form.search select {
	font-family: inherit;
	font-size: inherit;
	background:url('../img/down_chevron.png') left center no-repeat #196499;
	padding: 5px 5px 5px 20px;
	border: 1px solid #003b65;
	color: white;
	margin: 0 -4px 0 0;
	border-radius: 3px 0 0 3px;
	/*-webkit-appearance: none;*/
    /*-moz-appearance: none;*/
    /*text-indent: 0.01px;*/
    /*text-overflow: '';*/
}

/* Browser Hack to get rid of dropdown - MSIE */
/*form.search select::-ms-expand {*/
    /*display: none;*/
/*}*/

/* Browser hack to get rid of dropdown - FF for Mac (Fix doesn't work on Windows) */
/*@-moz-document url-prefix() {
form.search span.moz-select-wrap {
	background:url('../img/down_chevron.png') left center no-repeat #196499;
	padding: 5px 5px 5px 0px;
	border: 1px solid #003b65;
	color: white;
	margin: 0 -4px 0 0;
	border-radius: 3px 0 0 3px;
	-moz-appearance: none;
    text-indent: 0.01px;
    text-overflow: '';
  }
} */

form.search select, form.search select:active, form.search select:hover {
	outline: none;
	cursor: pointer;
}

form.search select:focus{
	border-color: #333;
	background-color: #1E79BA;
}

form.search h3 {
	margin: 0;
	padding: 0;
}

form.search .datepair input {
	border-radius: 3px;
	width: 130px;
	font-size: .875em;
	border-width: 1px;
	margin-bottom: 4px;
}

div.date-and-time {
	float: left;
	clear: left;
}

div.date-and-time p.datepair {
	margin-bottom: 0;
	padding-bottom: 0;
}


/* Server selection */
div.server-select {
	float: right;
	overflow: hidden;
	position: relative;
}

div.server-select h3 {
	margin: 0 0 10px;
}

div.server-select h3 span {
	font-size: .75em;
	font-weight: normal;
	font-style: italic;
}

div.server-select div.box-selector {
	width: 28%;
	height:100px;
	float:left;
	border: 1px solid #ccc;
	margin:0;
	text-align: center;
	color: #777;
	position: relative; /* necessary for status-indicator positioning */

	/* Get rid of annoying accidental selection */
	/*-webkit-touch-callout: none;*/
	/*-webkit-user-select: none;*/
	/*-khtml-user-select: none;*/
	/*-moz-user-select: none;*/
	/*-ms-user-select: none;*/
	/*user-select: none;*/
}

div.server-select div.box-selector p {
	font-size: .75em;
	margin: 0;
	padding: 0;
}

div.server-select div.box-selector h4 {
	margin: 30px 0 0;
}

div.server-select div.box-selector.on {
	border-color: #137C9C;
	color:#000;
}

div.server-select div.box-selector:hover {
	cursor: pointer;
	color: #333;
	border-color: #777;
}

div.server-select div.box-selector.on:hover {
	cursor: pointer;
	border-color: #137C9C;
	color:#000;
}

div.server-select div.server-arrow {
	width: 28px;
	height: 100px;
	display: block;
	float:left;
	border:1px solid white;
	background:url('../img/server_arrow.png') center center no-repeat #ccc;
}

div.server-select div.server-arrow.on {
	background-color: #137C9C;
}

div.server-select div.box-selector div.status-indicator
{
	position: absolute;
	top: -12px;
	right: -12px;
	height: 25px;
	width: 25px;
	background: url('../img/server_no.png') center center no-repeat transparent;
}

div.server-select div.box-selector.on div.status-indicator {
	background-image:url('../img/server_yes.png');
}

div.server-select input[type="checkbox"]
{
	visibility: hidden;
	position:absolute;
}

form.search input[type="submit"], form.search input[type="submit"]:active  {
	font-family: inherit;
	font-size: inherit;
	background: #196499;
	padding: 5px;
	float: right;
	border: 1px solid #003b65;
	color: white;
	margin: 1px 1.04167% 16px 0;
	border-radius: 3px;
	/*-webkit-appearance: none;*/
	width: 47.6%;
	box-shadow:0 2px 0 #003b65;
}

form.search input[type="submit"]:hover {
	cursor: pointer;
	background-color: #1B6DA8;
}

form.search input[type="submit"]:active {
	background-color: #1E79BA;
	box-shadow:0 1px 0 #003b65;
	margin: 2px 1.04167% 15px 0;
}

/* Table CSS */

table.results, table.results * {
	border-collapse: collapse;
}

table.results {
	width: 100%;
	font-size: .91em;
	font-weight: normal;
}

table.results th {
	background: #236597;
	color: white;
	font-weight: normal;
}

table.results tr {
	/*border:1px solid #759bb8;*/
    border: none;
    cursor: default;
}

table.results tr:last-child {
	border-bottom-width: 1px;
}

table tr.even-row
{
	background: #EFF6FC;
}

table tr.odd-row
{
	background: white;
}

table.results tr.tr-hover-state, div.rowOverlay .external-link-wrap {
	background: #6da7d3;
}

table.results tr.table-information:hover, table.results tr.log:hover, table.results th:hover {
	cursor: auto;
}

table.results tr.table-information:hover, table.results tr.log:hover {
	background-color: white;
}

table.results td, table.results th {
	padding:5px;
}

table.results tr td:nth-child(1), 
table.results tr td:nth-child(2), 
table.results tr td:nth-child(6), 
table.results tr td:nth-child(7),
table.results tr td:nth-child(8) {
	text-align: center;
}

table.results tr.table-information {
	border-width: 0;
	background-color: white;
}

table.results tr.table-information td {
	text-align: left;
	padding: 10px;
	font-weight: bold;
	font-size: 1.25em;
}

table.results tr td.canit-sender,
table.results tr td.canit-recipients,
table.results tr td.canit-subject {
    width: 200px;
}

span.canit-sender, span.canit-recipients, span.canit-subject {
	display: block;
	white-space: nowrap;
	text-overflow: ellipsis;
	overflow: hidden;
	/*max-width: 200px;*/
	width: 200px;
    height: inherit;
}

span.routers-sender, span.routers-recipients {
    display: block;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
    max-width: 350px;
}

span.exchange-sender, span.exchange-recipients, span.exchange-subject {
    display: block;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
    max-width: 270px;
}

table tr.log.even-row:hover
{
	background: #EFF6FC;
}

table tr.log.odd-row:hover
{
	background: white;
}

table.results tr:hover {
    background-color: #77aacc;
}

table.results tr.log p {
	font-size: .875em;
	padding: 10px 20px;
	text-align: left;
	font-family: "Source Code Pro", courier new, courier, sans-serif;
}

table.results td span.spam-score-good,
table.results td span.spam-score-quarantined,
table.results td span.spam-score-rejected
{
	background: #cbe7d3;
	padding: 2px;
	border-radius: 4px;
    cursor: default;
}

table.results td span.has-incident {
    cursor: pointer;
}

table.results td span.has-incident.spam-score-good:hover {
    background: #DEFFE7;
}

table.results td span.has-incident.spam-score-quarantined:hover {
    background: #EEAA00;
    color: white;
}

table.results td span.has-incident.spam-score-rejected:hover {
    background: #E81919;
    color: white;
}

table.results td span.spam-score-quarantined {
    background: #EE8800;
    color: white;
}

table.results td span.spam-score-rejected {
    background: #990011;
    color: white;
}

a.results {
    display: block;
    color: white;
    margin: 8px 0 0;
    padding: 5px 0;
    text-align: center;
    background: #196499;
    border: 1px solid #003b65;
    border-radius: 3px;
    font-size:.875em;
    box-shadow:0 2px 0 #003b65;
    cursor: default;
}

a.results.view-more:hover {
	cursor: pointer;
	background-color: #1B6DA8;
}

a.results.view-more:active {
	background-color: #1E79BA;
	box-shadow:0 1px 0 #003b65;
	margin:9px 0 -1px;
}

div.ui-tooltip {
    max-width: 400px;
    display: block;
    display: table-cell;
    word-break: break-all;
    border: solid 2px #1B6DA8;
    padding: 3px 6px 3px 41px;
    text-indent: -35px;
    /*text-align: center;*/
}

.hidden {
    display: none;
}

